fix gifts on ie11

--- a/src/ym-primary/sass/participant-center.scss
+++ b/src/ym-primary/sass/participant-center.scss
@@ -175,6 +175,7 @@ section.ym-pc-dashboard-standard-gifts-section {
 	   text-align:center;
 	   background: #eafbd7;
 	   padding: 20px;
+	   flex: 1 100%;
   
 	   @media (max-width: $screen-sm-min) {
               max-width:45%;
